[gd_scene load_steps=6 format=3 uid="uid://b1ww0a0svv2et"]

[ext_resource type="Script" path="res://scenes/settings.gd" id="1_5p8oq"]
[ext_resource type="Texture2D" uid="uid://y7ld84hu08ui" path="res://Assets/background/LoV_extB.png" id="2_n6stb"]
[ext_resource type="FontFile" uid="uid://cru7vmbpoyic2" path="res://Assets/fonts/Fortzilla-Regular.ttf" id="3_ulmin"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qhh6o"]
bg_color = Color(0, 0.607843, 0.866667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q2v06"]
bg_color = Color(0, 0.607843, 0.866667, 1)

[node name="settings" type="Node2D"]
script = ExtResource("1_5p8oq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BG" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1067.0
offset_top = -840.0
offset_right = 659.0
offset_bottom = 886.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_n6stb")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 263.0
offset_top = 91.0
offset_right = -236.0
offset_bottom = -148.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0.0117647, 0.0588235, 0.784314)

[node name="OptionsContainer" type="GridContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.5
offset_top = -203.5
offset_right = 290.5
offset_bottom = 203.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 80
theme_override_constants/v_separation = 45
columns = 2

[node name="MasterVolumeLabel" type="Label" parent="CanvasLayer/OptionsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ulmin")
theme_override_font_sizes/font_size = 30
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="CanvasLayer/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_qhh6o")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_q2v06")
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolumeLabel" type="Label" parent="CanvasLayer/OptionsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ulmin")
theme_override_font_sizes/font_size = 30
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="CanvasLayer/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_qhh6o")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_q2v06")
max_value = 1.0
step = 0.01
value = 1.0

[node name="SfxVolumeLabel" type="Label" parent="CanvasLayer/OptionsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ulmin")
theme_override_font_sizes/font_size = 30
text = "SFX Volume"

[node name="SfxVolumeSlider" type="HSlider" parent="CanvasLayer/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_qhh6o")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_q2v06")
max_value = 1.0
step = 0.01
value = 1.0

[node name="KeyBindingContainer" type="MarginContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 279.0
offset_top = -315.0
offset_right = -288.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 190

[node name="KeyBindingButton" type="Button" parent="CanvasLayer/KeyBindingContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_ulmin")
theme_override_font_sizes/font_size = 30
text = "   Key Bindings   "

[node name="BackContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 70

[node name="BackButton" type="Button" parent="CanvasLayer/BackContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ulmin")
theme_override_font_sizes/font_size = 30
text = "BACK"

[connection signal="value_changed" from="CanvasLayer/OptionsContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/OptionsContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/OptionsContainer/SfxVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer/KeyBindingContainer/KeyBindingButton" to="." method="_on_key_binding_button_pressed"]
[connection signal="pressed" from="CanvasLayer/BackContainer/BackButton" to="." method="_on_back_button_pressed"]
